--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class = "temperature">
-  <h2>Temperature</h2><div class="degree-section">
+  <h2>Temperature<h4>"click the value to change it in degree"</h4></h2><div class="degree-section">
 	<h2 class="temperature-degree"></h2>
 	<span>F</span>
   </div>
